--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-i18next": "^13.5.0",
     "react-map-gl": "^7.1.6",
+    "recharts": "^2.10.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
