--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^2.7.19",
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "i18next": "^23.7.7",
     "mapbox-gl": "^3.0.1",
