--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
     "@types/mapbox-gl": "^2.7.19",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "i18next": "^23.7.7",
