--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/aos": "^3.0.7",
     "@types/mapbox-gl": "^2.7.19",
+    "@types/swiper": "^6.0.0",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
@@ -26,7 +27,8 @@
     "react-i18next": "^13.5.0",
     "react-map-gl": "^7.1.6",
     "recharts": "^2.10.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
