--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-i18next": "^13.5.0",
     "react-map-gl": "^7.1.6",
+    "react-scroll-to-bottom": "^4.2.0",
     "recharts": "^2.10.3",
     "recoil": "^0.7.7",
     "swiper": "^11.0.5"
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll-to-bottom": "^4.2.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
