--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.7.7",
+    "jspdf": "^2.5.1",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
