--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@types/aos": "^3.0.7",
@@ -44,6 +45,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
