--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "firebase": "^11.0.2",
     "html2canvas": "^1.4.1",
     "i18next": "^23.7.7",
     "jspdf": "^2.5.1",
