[feature] calculator ui progress

--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@types/swiper": "^6.0.0",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
+    "csstype": "^3.0.10",
     "dotenv": "^16.3.1",
     "firebase": "^11.0.2",
     "html2canvas": "^1.4.1",
     "i18next": "^23.7.7",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
@@ -28,6 +33,8 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-heatmap-grid": "^0.9.1",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.6",
@@ -35,7 +42,8 @@
     "recharts": "^2.10.3",
     "recoil": "^0.7.7",
     "shortid": "^2.2.16",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
