--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.2",
     "classnames": "^2.5.1",
     "csstype": "^3.0.10",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.3.1",
     "firebase": "^11.0.2",
     "html2canvas": "^1.4.1",
@@ -34,13 +36,15 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-heatmap-grid": "^0.9.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-map-gl": "^7.1.6",
+    "react-markdown": "^10.1.0",
     "react-scroll-to-bottom": "^4.2.0",
     "recharts": "^2.10.3",
     "recoil": "^0.7.7",
+    "remark-gfm": "^4.0.1",
     "shortid": "^2.2.16",
     "swiper": "^11.0.5",
     "zustand": "^5.0.2"
