--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "csstype": "^3.0.10",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
     "dotenv": "^16.3.1",
     "firebase": "^11.0.2",
